# dl

./: .gitignore  CHANGELOG.md  README  dl.cabal  flake.nix
app/: Main.hs  Util.hs
datalog/: dl.cabal
datalog/examples/: graph.dl
datalog/exe-dld/: Main.hs  NetworkUtils.hs  ProtoUtils.hs  README.md
datalog/lib/Data/DL/: Evaluation.hs  Universe.hs  Util.hs
datalog/lib/Data/DL/Evaluation/: Naive.hs
examples/: graph.dl  nary.dl  socrates.dl
gui/: Cargo.toml  build.rs
gui/src/: db.rs  gui.rs  lib.rs  main.rs
gui/src/gui/: loader.rs  viewer.rs
lib/Data/DL/: Parser.hs  Universe.hs  Util.hs
lib/Data/DL/Evaluation/: Naive.hs  Util.hs
proto/: messaging.proto
