cabal-version:      3.0
name:               dl
version:            0.1.0.0
-- synopsis:
-- description:
license:            MPL-2.0
license-file:       LICENSE
author:             Tali Auster
maintainer:         me@tali.network
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable dl
    import:           warnings
    main-is:          Main.hs
    -- other-extensions:
    build-depends:    base ^>=4.19.2.0, parsec ^>= 3.1, dl
    hs-source-dirs:   app
    default-language: Haskell2010

library
    exposed-modules:
      Data.DL.Parser,
      Data.DL.Universe,
      Data.DL.Evaluation,
      Data.DL.Evaluation.Naive
    other-modules: Data.DL.Util

    build-depends:    base ^>=4.19.2.0, extra ^>= 1.7, parsec ^>= 3.1
    hs-source-dirs: lib
    default-language: Haskell2010
