cabal-version:      3.0
name:               dl
version:            0.1.0.0
-- synopsis:
-- description:
license:            MPL-2.0
license-file:       LICENSE
author:             Tali Auster
maintainer:         me@tali.network
-- copyright:
category:           Development
extra-doc-files:    CHANGELOG.md

build-type: Custom
extra-source-files: ../proto/messaging.proto

custom-setup
  setup-depends: base, Cabal, proto-lens-setup

common warnings
    ghc-options: -Wall

executable dld
    import:           warnings
    main-is:          Main.hs
    build-depends:
      base ^>=4.19.2.0,
      parsec ^>= 3.1,
      network,
      proto-lens-runtime,
      proto-lens,
      lens,
      bytestring,
      dl
    other-modules:
      Proto.Messaging,
      Proto.Messaging_Fields,
      NetworkUtils,
      ProtoUtils,
    autogen-modules: Proto.Messaging, Proto.Messaging_Fields
    hs-source-dirs:   exe-dld
    default-language: Haskell2010

executable dl-load
    import:           warnings
    main-is:          Main.hs
    -- other-extensions:
    build-depends:    base ^>=4.19.2.0, parsec ^>= 3.1, dl
    hs-source-dirs:   exe-dl-load
    default-language: Haskell2010

library
    exposed-modules:
      Data.DL.Parser,
      Data.DL.Universe,
      Data.DL.Evaluation,
      Data.DL.Evaluation.Naive
    other-modules:
      Data.DL.Util,
      Data.DL.Evaluation.Util,

    build-depends:    base ^>=4.19.2.0, extra ^>= 1.7, parsec ^>= 3.1
    hs-source-dirs: lib
    default-language: Haskell2010
